fix layout issue

--- a/src/lite-youtube/style.scss
+++ b/src/lite-youtube/style.scss
@@ -6,6 +6,8 @@
  */
 .wp-block-create-block-lite-youtube {
 	overflow: hidden;
+	max-height: 100%;
+	margin: auto;
 }
 
 .wp-block-create-block-lite-youtube figure {
